--- a/MasterPage.master
+++ b/MasterPage.master
@@ -276,6 +276,13 @@
                                 <a href="#" class="dropdown-toggle">Hacking</a>
                                 <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
                                     <li>
+                                        <a href="#" class="dropdown-toggle">Windows</a>
+                                        <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+<%--                                            <li><a href="">Hack Switched-off PC</a></li>--%>
+                                            <li><a href="../../../../docs/Technology/Hacking/Windows/Windows10HackingTools.pdf">Tools</a></li>
+                                        </ul>
+                                    </li>
+                                    <li>
                                         <a href="#" class="dropdown-toggle">Macintosh Hacks</a>
                                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
                                             <li>
