leaders page added

--- a/MasterPage.master
+++ b/MasterPage.master
@@ -440,6 +440,7 @@
                                     <li><a href="../../../UIEntrepreneurship/StartupResources/PitchDecks.aspx">Pitch Decks</a></li>
                                     <li><a href="../../../UIEntrepreneurship/StartupResources/ImpBooks.aspx">Imp Books</a></li>
                                     <li><a href="../../../UIEntrepreneurship/StartupResources/StartupStories.aspx">Startup Stories</a></li>
+                                    <li><a href="../../../UIEntrepreneurship/StartupResources/Leaders.aspx">Leaders</a></li>
                                     <%--<li><a href="" style = "color:gray">Blogs</a></li>--%>
                                 </ul>
                             </li>
