--- a/MasterPage.master
+++ b/MasterPage.master
@@ -428,7 +428,7 @@
                                 <a href="#" class="dropdown-toggle">Start a Startup</a>
                                 <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
                                     <%--<li><a href="" style = "color:gray">How To Start A Company</a></li>--%>
-                                    <li><a href="http://www.subtlegopala.com/docs/Entrepreneurship/StartupGuide.pdf">Ultimate Guide</a></li>
+                                    <li><a href="http://www.gopala-krishna.com/docs/Entrepreneurship/StartupGuide.pdf">Ultimate Guide</a></li>
                                     <li><a href="https://www.youtube.com/channel/UCxIJaCMEptJjxmmQgGFsnCg">Stanford Lectures</a></li>
                                 </ul>
                             </li>
@@ -499,7 +499,7 @@
                             <a class="icon-skype on-right on-left" href="skype:gopala.krishna_1" style="background: skyblue; color: white; padding: 10px; border-radius: 50%"></a>
 
                             <h3 class="fg-white text-shadow">Like & Share</h3>
-                            <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fsubtlegopala.com%2F&amp;width=200&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21" scrolling="no" frameborder="0" style="border: none; overflow: hidden; width: 200px; height: 21px;" allowtransparency="true"></iframe>
+                            <iframe src="//www.facebook.com/plugins/like.php?href=http%3A%2F%2Fgopala-krishna.com%2F&amp;width=200&amp;layout=button_count&amp;action=like&amp;show_faces=true&amp;share=true&amp;height=21" scrolling="no" frameborder="0" style="border: none; overflow: hidden; width: 200px; height: 21px;" allowtransparency="true"></iframe>
                         </div>
 
                         <div class="span6 padding5">
