--- a/MasterPage.master
+++ b/MasterPage.master
@@ -350,6 +350,17 @@
                                 </ul>
                             </li>
 
+                             <li>
+                                <a href="#" class="dropdown-toggle">AI & ML</a>
+                                <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                                    <li>
+                                        <a href="#" class="dropdown-toggle">Sentiment Analysis</a>
+                                        <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                                            <li><a href="https://monkeylearn.com/sentiment-analysis/">Getting Started</a></li>
+                                        </ul>
+                                    </li>
+                                </ul>
+                            </li>
 
                             <%--<li>
                                 <a href="#" class="dropdown-toggle">Databases</a>
