--- a/MasterPage.master
+++ b/MasterPage.master
@@ -112,8 +112,9 @@
                     <li>
                         <a href="#" class="dropdown-toggle">Math Fun</a>
                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
-                            <li><a href="../../../UIMathFun/MathPuzzles.aspx ">Mathematics Puzzles</a></li>
-                            <li><a href="../../../UIMathFun/InterestingFactsAboutPI.aspx ">Facts About PI</a></li>
+                            <li><a href="../../../UIMathFun/MathPuzzles.aspx">Mathematics Puzzles</a></li>
+                            <li><a href="../../../UIMathFun/InterestingFactsAboutPI.aspx">Facts About PI</a></li>
+                            <li><a href="https://en.wikipedia.org/wiki/List_of_unsolved_problems_in_mathematics">Unsolved Problems</a></li>
                         </ul>
                     </li>
 
