--- a/MasterPage.master
+++ b/MasterPage.master
@@ -418,6 +418,15 @@
                         <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
                             <li><a href="../../../UIProductManagement/MyProductPage.aspx">My Product Page</a></li>
                             <li><a href="../../../UIProductManagement/HowSystemsWork.aspx">How Systems Work</a></li>
+
+                             <li>
+                                <a href="#" class="dropdown-toggle">Recommendation Systems</a>
+                                <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
+                                    <li><a href="../../../docs/ProductManagement/RecommendationSystems/GettingStarted/RecommenderSystemsInPractice.pdf">Getting Started</a></li>
+                                    <li><a href="../../../UIProductManagement/RecommendationSystems.aspx">Internals</a></li>
+                                </ul>
+                            </li>
+                           
                             <li><a href="../../../UIProductManagement/MyPMArticles.aspx">My PM Articles</a></li>
                             <li><a href="../../../UIProductManagement/InterestingBugs.aspx">Interesting Bugs</a></li>
                         </ul>
