--- a/MasterPage.master
+++ b/MasterPage.master
@@ -421,7 +421,7 @@
                             <li><a href="../../../UIProductManagement/MonetizationStrategies.aspx">Monetization Strategies</a></li>
 
                              <li>
-                                <a href="#" class="dropdown-toggle">Recommendation Systems</a>
+                                <a href="#" class="dropdown-toggle">Recommendations</a>
                                 <ul class="dropdown-menu dark" data-role="dropdown" data-show="hover">
                                     <li><a href="../../../docs/ProductManagement/RecommendationSystems/GettingStarted/RecommenderSystemsInPractice.pdf">Getting Started</a></li>
                                     <li><a href="../../../UIProductManagement/RecommendationSystems.aspx">Internals</a></li>
